--- a/app/src/main/res/layout/list_item_field_detail_recycler.xml
+++ b/app/src/main/res/layout/list_item_field_detail_recycler.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/statelist_item_background"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="start"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingTop="12dp"
     android:paddingBottom="12dp">
@@ -18,11 +18,11 @@
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_trait_categorical"/>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/container_inner_item"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical"
         android:layout_centerVertical="true">
 
@@ -31,7 +31,6 @@
             android:id="@+id/traitNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="start"
             android:singleLine="true"
@@ -48,6 +47,22 @@
             android:minWidth="40dp"
             android:singleLine="true"
             android:textSize="@dimen/text_size_small" />
+
+        <!-- CardView for Material Design look -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:cardElevation="4dp"
+            app:cardCornerRadius="8dp"
+            android:background="@color/light_gray">
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/histogramChart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"/>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
