--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- portrait-relative image preview sizes for camera trait recycler view, these should be 4:3-->
-    <dimen name="camera_preview_width">230dp</dimen>
-    <dimen name="camera_preview_height">300dp</dimen>
+    <!-- landscape image preview sizes for camera trait recycler view, these should be 4:3-->
+    <dimen name="camera_preview_landscape_width">150dp</dimen>
+    <dimen name="camera_preview_landscape_height">115dp</dimen>
+
+    <!-- portrait image preview sizes for camera trait recycler view, these should be 4:3-->
+    <dimen name="camera_preview_portrait_width">230dp</dimen>
+    <dimen name="camera_preview_portrait_height">300dp</dimen>
 
     <!-- text sizes -->
     <!-- regular text -->
