fixed canon image transfer corruption, saved based on offsets of data improved image saving speed updated canon settings, preview now is toggleable ensure photo file names are sanitized so they can be used with dir.findFile removed old canon preferences added beta to canon trait display name

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- custom attributes for TItledEditText View -->
+    <declare-styleable name="TitledEditView">
+        <attr name="title" format="string"/>
+        <attr name="android:hint" format="string"/>
+        <attr name="android:inputType" format="integer"/>
+    </declare-styleable>
+
     <!-- Give ourselves access to MarginLayout's styleables -->
     <declare-styleable name="ViewGroup_MarginLayout">
         <attr name="android:layout_margin" />
