--- a/app/src/main/res/layout/list_item_traits_grid.xml
+++ b/app/src/main/res/layout/list_item_traits_grid.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="128dp"
+    android:layout_width="match_parent"
     android:layout_height="128dp"
     android:orientation="vertical">
 
