--- a/app/src/main/res/layout/dialog_brapi_export.xml
+++ b/app/src/main/res/layout/dialog_brapi_export.xml
@@ -46,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/brapistudyValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -368,6 +368,29 @@
             android:layout_weight="1"
             android:onClick="onClick"
             android:text="@string/brapi_export_button" />
+
+        <Button
+            android:id="@+id/next_field_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginHorizontal="20dp"
+            android:layout_weight="1"
+            android:onClick="onNextFieldClick"
+            android:text="@string/brapi_next_field_button"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/close_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginHorizontal="20dp"
+            android:layout_weight="1"
+            android:onClick="onCloseClick"
+            android:text="@string/brapi_close_button"
+            android:visibility="gone" />
+
     </LinearLayout>
 
     <LinearLayout
