--- a/app/src/main/res/xml/preferences_appearance.xml
+++ b/app/src/main/res/xml/preferences_appearance.xml
@@ -31,6 +31,39 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="category_appearance_features"
+        android:title="@string/preferences_appearance_features_category_title"
+        app:allowDividerAbove="true"
+        app:iconSpaceReserved="false">
+
+        <ListPreference
+            android:icon="@drawable/ic_tb_forward"
+            android:key="com.fieldbook.tracker.HIDE_ENTRIES_WITH_DATA_TOOLBAR"
+            android:summary="@string/preferences_general_feature_next_missing_description"
+            android:title="@string/preferences_general_feature_next_missing"
+            android:entries="@array/pref_general_skip_entries_entries"
+            android:entryValues="@array/pref_general_skip_entries_values"
+            android:defaultValue="1"/>
+
+        <ListPreference
+            android:icon="@drawable/ic_tb_barcode_scan"
+            android:key="com.fieldbook.tracker.MOVE_TO_UNIQUE_ID"
+            android:summary="@string/preferences_general_feature_barcode_text_description"
+            android:title="@string/preferences_general_feature_barcode_text"
+            android:entries="@array/pref_general_move_to_unique_id_entries"
+            android:entryValues="@array/pref_general_move_to_unique_id_values"
+            android:defaultValue="1"/>
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_tb_datagrid"
+            android:key="DataGrid"
+            android:summary="@string/preferences_general_feature_datagrid_description"
+            android:title="@string/preferences_general_feature_datagrid" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="category_appearance_collect"
         android:title="@string/preferences_appearance_collection_category_title"
         app:allowDividerAbove="true"
