update volume key advancement setting

--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -58,9 +58,9 @@
             android:entries="@array/pref_remap_volume_buttons"
             android:entryValues="@array/pref_remap_volume_buttons_values"
             android:icon="@drawable/ic_remap_volume_buttons"
-            android:key="com.fieldbook.tracker.VOLUME_NAVIGATION"
-            android:summary="@string/preferences_behavior_volume_buttons_navigate_description"
-            android:title="@string/preferences_behavior_volume_buttons_navigate" />
+            android:key="VOLUME_NAVIGATION"
+            android:summary="%s"
+            android:title="@string/preferences_behavior_volume_buttons_advance" />
 
         <ListPreference
             android:defaultValue="0"
