--- a/app/src/main/res/xml/preferences_sounds.xml
+++ b/app/src/main/res/xml/preferences_sounds.xml
@@ -2,33 +2,40 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:icon="@drawable/ic_pref_sounds_primary"
-        android:key="RangeSound"
-        android:summary="@string/preferences_sound_primary_order_sound_description"
-        android:title="@string/preferences_sound_primary_order_sound" />
+    <PreferenceCategory
+        android:key="preferences_sounds"
+        android:title="@string/preferences_sounds"
+        app:iconSpaceReserved="false">
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:icon="@drawable/ic_pref_sounds_advance"
-        android:key="ENTRY_NAVIGATION_SOUND"
-        android:title="@string/preferences_sound_entry_title"
-        android:summary="@string/preferences_sound_entry_description" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_pref_sounds_primary"
+            android:key="RangeSound"
+            android:summary="@string/preferences_sound_primary_order_description"
+            android:title="@string/preferences_sound_primary_order_title" />
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:icon="@drawable/ic_pref_sounds_cycle"
-        android:key="CYCLE_TRAITS_SOUND"
-        android:title="@string/preferences_sound_cycle_traits_title"
-        android:summary="@string/preferences_sound_cycle_traits_description" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_pref_sounds_advance"
+            android:key="ENTRY_NAVIGATION_SOUND"
+            android:title="@string/preferences_sound_entry_title"
+            android:summary="@string/preferences_sound_entry_description" />
 
-    <CheckBoxPreference
-        android:defaultValue="false"
-        android:icon="@drawable/ic_tb_delete"
-        android:key="DELETE_OBSERVATION_SOUND"
-        android:title="@string/preferences_sound_delete_obs_title"
-        android:summary="@string/preferences_sound_delete_obs_description" />
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_pref_sounds_cycle"
+            android:key="CYCLE_TRAITS_SOUND"
+            android:title="@string/preferences_sound_cycle_traits_title"
+            android:summary="@string/preferences_sound_cycle_traits_description" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:icon="@drawable/ic_tb_delete"
+            android:key="DELETE_OBSERVATION_SOUND"
+            android:title="@string/preferences_sound_delete_obs_title"
+            android:summary="@string/preferences_sound_delete_obs_description" />
+
+    </PreferenceCategory>
 
     <PreferenceCategory android:title="@string/preferences_category_audio_tts_title"
         app:iconSpaceReserved="false">
