--- a/app/src/main/res/xml/preferences_system.xml
+++ b/app/src/main/res/xml/preferences_system.xml
@@ -35,11 +35,11 @@
             app:useSimpleSummaryProvider="true" />
 
         <CheckBoxPreference
-            android:defaultValue="false"
-            android:icon="@drawable/ic_adv_disable_file_sharing"
-            android:key="DisableShare"
-            android:summary="@string/preferences_general_share_disable_description"
-            android:title="@string/preferences_general_share_disable" />
+            android:defaultValue="true"
+            android:icon="@drawable/ic_share"
+            android:key="EnableShare"
+            android:summary="@string/preferences_general_share_enable_description"
+            android:title="@string/preferences_general_share_enable" />
 
     </PreferenceCategory>
     <PreferenceCategory
