--- a/app/src/main/res/menu/menu_brapi_pref.xml
+++ b/app/src/main/res/menu/menu_brapi_pref.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_menu_brapi_auto_configure"
+        android:icon="@drawable/ic_trait_barcode"
+        app:showAsAction="always"
+        android:summary="@string/preferences_brapi_barcode_config_summary"
+        android:title="@string/preferences_brapi_barcode_config_title" />
+    <item
         android:id="@+id/action_menu_brapi_pref_auth"
         android:icon="@drawable/lock_reset"
         app:showAsAction="always"
